# block_cimmino

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.rst  abcd.kdev4  cmake_install.cmake  config_file.info  config_file.info_advanced  env.in
cmake.in/: abcdCmake.in.ACML  abcdCmake.in.GNU  abcdCmake.in.MKL  abcdCmake.in.OpenBLAS  abcdCmake.in.new  abcdCmake.in.spldlt.MKL  abcdCmake.in.spldlt.mumps.MKL
doc/: Doxyfile  Makefile  abcd_usage.html  clean.sh  clean_full.sh  gen.sh  gen_doxygen.sh  gen_sphx.sh  header.tex  installation.md  main.md  solver.md  solver_c.md  todo.md  usage.md
doc/auto/: header.el
doc/linear/: docco.css
doc/old_doxygen/: Doxyfile  gen.sh  gen_doxygen.sh  highlight.pack.js  main.md  solver.md
doc/source/: algorithm.rst  api.rst  conf.py  index.rst  installation.rst  todo.rst  usage_cpp.rst
doc/source/xml/: ____init_____8py.xml  abcd_8cpp.xml  abcd_8h.xml  abcd__c_8h.xml  aij__augment_8cpp.xml  analysis_8cpp.xml  augmentation_8cpp.xml  augmented__systems_8cpp.xml  bcg_8cpp.xml  build_s_8cpp.xml  c__interface_8cpp.xml  cij__augment_8cpp.xml  cimmino_8cpp.xml  classabcd.xml  classsphinxcontrib_1_1tikz_1_1_tikz_directive.xml  classsphinxcontrib_1_1tikz_1_1_tikz_ext_error.xml  classsphinxcontrib_1_1tikz_1_1tikz.xml  classsphinxcontrib_1_1tikz_1_1tikzinline.xml  comms_8cpp.xml  communication_8cpp.xml  compress__columns_8cpp.xml  conf_8py.xml  defaults_8h.xml  define__slaves_8cpp.xml  dir_05511df6bcd56ecc2ec90168a490f6ee.xml  dir_15acda7902985122b8bdba2d2faecf68.xml  dir_181c9c860eabc4942181f3774ac29a17.xml  dir_28ada5c8e6f16519651dbc7f40619492.xml  dir_313caf1132e152dd9b58bea13a4052ca.xml  dir_38ee114e808a2beb276c016ebd2ad5af.xml  dir_3de8cff75d796a08a479ea2780cdcbc1.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_7c7bb55e8ca84dfca8c72b260e33fd14.xml  dir_87c9769afaf9c68ff31fe0387c9ff57a.xml  dir_9655df946259d9fb0c43b0282f9e4a22.xml  dir_a9d88a40f0721fc323be27f74ff5252f.xml  dir_b891e558b8bc3c54dc1492129cfd4187.xml  dir_bbb17e10796aff76ef62dd10bd673a98.xml  dir_c8a3a375903fbe108939f1488399eacb.xml  dir_cd14cd687467e804ccf83f20fe05f7a0.xml  (+58 more)
doc/sphx/source/: conf.py  index.rst  installation.rst
docs/: Doxyfile  abcd_usage.html  gen.sh  refs.bib  usage.md
docs/auto/: refs.el
docs/linear/: docco.css
example/: CMakeLists.txt  e05r0500.mtx_part4  e05r0500_x0.mtx  example.c  example.cpp
include/: #abcd.h#  abcd.h  abcd.h.in  abcd_c.h  comparison_op.h  defaults.h  easylogging++.h  mat_utils.h  mc77.h  mmio.h  mumps.h  paircomparison.h  spldlt.h  splib_utils.h  vect_utils.h
lib/mumps/include/: dmumps_c.h  dmumps_root.h  dmumps_struc.h  mumps_c_types.h  mumps_compat.h
lib/mumps/lib/test/: make_static.sh
lib/sparselib/: makefile.def
lib/sparselib/include/: compcol_double.h  comprow_double.h  coord_double.h
lib/sparselib/mv/include/: mvmd.h  mvvd.h  mvvi.h
lib/sparselib/testing/: tpre  tsl  tsp  tspsm
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: Default.properties
python/: CMakeLists.txt  Makefile  example.py  python_interface.cpp
python/numpy/: CMakeLists.txt
src/: :w  CMakeCache.txt  Makefile  abcd.cpp  bcg.cpp  c_interface.cpp  cimmino.cpp  cmake_install.cmake  comms.cpp  communication.cpp  define_slaves.cpp  mc77ad.f  mmio.c  mumps.cpp  preprocess.cpp  s_utils.cpp  solve.cpp  sparsekit.f90  splib_utils.cpp  structure.cpp  tags  types_c.taghl  types_fortran.taghl  utils.cpp  worker.cpp
src/mumps/: analysis.cpp  augmented_systems.cpp  factorization.cpp  init.cpp  simple_sumproject.cpp  sparse_simple_sumproject.cpp  sumproject.cpp
src/preprocess/: aij_augment.cpp  augmentation.cpp  cij_augment.cpp  partitioning.cpp  scaling.cpp
src/spldlt/: analysis.cpp  factorization.cpp  init.cpp  sumproject.cpp
src/src/utils/: Makefile  cmake_install.cmake
src/sutils/: buildS.cpp  solveS.cpp
src/test/: Makefile  cmake_install.cmake
src/utils/: compress_columns.cpp  logger.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake
test/src/: abcd_c.h  basic.cpp  bc_example.c  bc_example.cpp  c_exemple.c  c_interface.cc  c_test.c  config_file.info  example.cc  example.cpp  example_sub_comm.cpp  main.cpp  main_with_spldlt.cpp  test.cpp  test_para.cpp
test/tools/: coverage.sh
tools/: README
